--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "ant-design-vue": "^1.7.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vuetify": "^2.5.5"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.12.1",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2",
-    "push-dir": "^0.4.1"
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.3.2"
   }
 }
