--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Resume",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "author": "Nadthaphon Changchai",
   "scripts": {
@@ -15,6 +15,7 @@
     "core-js": "^3.15.1",
     "firebase": "^9.6.1",
     "nuxt": "^2.15.7",
+    "snow-fall-effect": "^1.3.8",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
