--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@vue/test-utils": "^2.4.6",
     "core-js": "^3.15.1",
     "firebase": "^9.6.1",
     "nuxt": "^2.15.7",
-    "snow-fall-effect": "^1.3.8",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
